translated left-over swedish in footer to english, adjusted page title and logo alt text to fit the new name BodyData

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Spåra din hälsa med vår användarvänliga webbaserade applikation. Logga vikt, blodtryck och sömn för att nå dina hälso- och wellnessmål. Bli mer medveten om din hälsa idag!" />
     <meta name="keywords" content="hälsospårning, vikt, blodtryck, sömn, wellness, TDEE, kaloriberäkning, hälsomål" />
     <meta name="robots" content="index, follow" />
-    <title>Health Tracker</title>
+    <title>BodyData</title>
   </head>
   <body>
     <div id="root"></div>
